force-app/main/default/objects/smagicinteract__Message_Action__c/fields/smagicinteract__Case__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Deprecated. Do not use. This field contains the ID of the related Action.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Message Actions</relationshipLabel>
    <relationshipName>Message_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>