force-app/main/default/objects/smagicinteract__Message_Action__c/fields/smagicinteract__Incoming_SMS__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Incoming_SMS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Deprecated. Do not use. This is a message sent by the end user.</description>
    <label>Incoming SMS</label>
    <referenceTo>smagicinteract__Incoming_SMS__c</referenceTo>
    <relationshipLabel>Message Actions</relationshipLabel>
    <relationshipName>Message_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>