force-app/main/default/objects/smagicinteract__Message_Action__c/fields/smagicinteract__Lead__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Deprecated. Do not use. This is a prospect that needs to be qualified as a real sales opportunity.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Message Actions</relationshipLabel>
    <relationshipName>Message_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>