force-app/main/default/objects/smagicinteract__Message_Action__c/fields/smagicinteract__SMS_History__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__SMS_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Deprecated. Do not use. This field keeps the record of all outgoing and incoming SMS.</description>
    <label>SMS History</label>
    <referenceTo>smagicinteract__smsMagic__c</referenceTo>
    <relationshipLabel>Message Actions</relationshipLabel>
    <relationshipName>Message_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>